# snake

./: Cargo.toml  README.md  index.html
src/: game.rs  lib.rs
