[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
web-sys = { version= "0.3.64", features = ["Window","Document","Element","HtmlElement","CssStyleDeclaration","HtmlDivElement","KeyboardEvent"]}
js-sys = "0.3.64"


